--- a/bandcamp/fuzzysearch/schema/AppAutocompleteRs.json
+++ b/bandcamp/fuzzysearch/schema/AppAutocompleteRs.json
@@ -8,7 +8,7 @@
         "properties": {
           "type": {
             "type": "string",
-            "example": "b"
+            "enum": ["b", "a", "t", "f"]
           },
           "id": {
             "type": "integer",
@@ -27,6 +27,13 @@
           "name": {
             "type": "string",
             "example": "Vapor Vagabond"
+          },
+          "band_id": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "band_name": {
+            "type": "string"
           },
           "location": {
             "type": "string",
