--- a/test/pom.xml
+++ b/test/pom.xml
@@ -28,7 +28,9 @@
         <resteasy.version>6.2.12.Final</resteasy.version>
 
         <!-- Logging -->
-        <slf4j.version>1.7.36</slf4j.version>
+        <slf4j.version>2.0.17</slf4j.version>
+        <logback.version>1.5.18</logback.version>
+
     </properties>
 
     <dependencies>
@@ -49,14 +51,9 @@
             <version>${resteasy.version}</version>
         </dependency>
         <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>2.18.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>3.17.0</version>
+            <groupId>com.chavaillaz</groupId>
+            <artifactId>jaxrs-logging</artifactId>
+            <version>3.1.0</version>
         </dependency>
 
         <!-- Logging -->
@@ -66,9 +63,9 @@
             <version>${slf4j.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-jdk14</artifactId>
-            <version>${slf4j.version}</version>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback.version}</version>
         </dependency>
 
         <!-- Test -->
